<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".DeviceFragment" >
   
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingBottom="10dp"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       android:paddingTop="5dp" >

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:text="@string/txt_amos"
         android:textSize="15sp" />
        
        <Button
            android:id="@+id/callAmosMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_amosMbl" />
            
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bamban"
        android:textSize="15sp" />

        <Button
            android:id="@+id/callBambanMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_bamban" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_camiling"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callCamilingTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_camiling" />
        
        <Button
            android:id="@+id/callCamilingMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_camilingMbl" />
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_capas"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callCapasTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_capas" />
        
        <Button
            android:id="@+id/callCapasMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_capasMbl" />
        
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/txt_capasSub"
             android:textSize="15sp" />
        
        <Button
            android:id="@+id/callCapasSubMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_capasSubMbl" />
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_gerona"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callGeronaTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_gerona" />
        
        <Button
            android:id="@+id/callGeronaMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_geronaMbl" />
        
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_lapaz"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callLaPazTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_lapaz" />
        
        <Button
            android:id="@+id/callLaPazMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_lapazMbl" />
        
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_mayantoc"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callMayantocTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_mayantoc" />
        
        <Button
            android:id="@+id/callMayantocMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_mayantocMbl" />
        
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/txt_moncada"
             android:textSize="15sp" />
        
        <Button
            android:id="@+id/callMoncadaTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_moncada" />
        
        <Button
            android:id="@+id/callMoncadaMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_moncadaMbl" />
        
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_paniqui"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callPaniquiTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_paniqui" />
        
        <Button
            android:id="@+id/callPaniquiMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_paniquiMbl" />
        
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_sanjose"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callSanJoseMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_sanjoseMbl" />
        
         <TextView
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/txt_staignacia"
             android:textSize="15sp" />
        
        <Button
            android:id="@+id/callStaIgnaciaTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_staignacia" />
        
        <Button
            android:id="@+id/callStaIgnaciaMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_staignaciaMbl" />
            
         <TextView
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/txt_tarlac"
             android:textSize="15sp" />
        
        <Button
            android:id="@+id/callTarlacTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_tarlac" />
        
        
        <Button
            android:id="@+id/callTarlac1Tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_tarlac1" />
        
        <Button
            android:id="@+id/callTarlacMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_tarlacMbl" />
        
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txt_victoria"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/callVictoriaTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_victoria" />
        
        <Button
            android:id="@+id/callVictoriaMbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_victoriaMbl" />
        
    </LinearLayout>
  </ScrollView>
    
