<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
   
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingBottom="10dp"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       android:paddingTop="5dp" >

       <Button
           android:id="@+id/download1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download1"
           android:text="@string/btn_download1" />
       
       
       <Button
           android:id="@+id/download2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download2"
           android:text="@string/btn_download2" />
       
       <Button
           android:id="@+id/download3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download3"
           android:text="@string/btn_download3" />
       
       <Button
           android:id="@+id/download4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download4"
           android:text="@string/btn_download4" />
       
       <Button
           android:id="@+id/download5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download5"
           android:text="@string/btn_download5" />
       
       <Button
           android:id="@+id/download6"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download6"
           android:text="@string/btn_download6" />
       
       <Button
           android:id="@+id/download7"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download7"
           android:text="@string/btn_download7" />
       
       <Button
           android:id="@+id/download8"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download8"
           android:text="@string/btn_download8" />
       
       <Button
           android:id="@+id/download9"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download9"
           android:text="@string/btn_download9" />
       
       <Button
           android:id="@+id/download10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.67"
           android:onClick="download10"
           android:text="@string/btn_download10" />
   </LinearLayout>
 	
</ScrollView>